--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -1,5 +1,5 @@
 - name: Luca Carlone
   image: /assets/images/luca.png
-  position: Assistant Professor
+  position: Associate Professor
   affiliation: Massachusetts Institute of Technology
 
