--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -3,3 +3,7 @@
   position: Associate Professor
   affiliation: Massachusetts Institute of Technology
 
+- name: Jen Jen Chung
+  image: /assets/images/jenjen.png
+  position: Associate Professor
+  affiliation: The University of Queensland
