--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Robot Representations
 description: Title
-sitename: Robot Representations @ ICRA2023
-baseurl: /robotRepresentations-ICRA2023
+sitename: Robot Representations @ RSS2023
+baseurl: /robotRepresentations-RSS2023
 url: https://mit-spark.github.io
 
 sass:
