--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -7,3 +7,13 @@
   image: /assets/images/jenjen.png
   position: Associate Professor
   affiliation: The University of Queensland
+
+- name: Julian F&ouml;rster
+  image: /assets/images/julian.png
+  position: Doctoral candidate
+  affiliation: ETH Z&uuml;rich
+  
+- name: Federico Tombari
+  image: /assets/images/federico.png 
+  position: Lecturer, Research Scientist
+  affiliation: TUM, Google
